--- a/final_exam/package.json
+++ b/final_exam/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "demo_final",
+  "name": "final_exam",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -9,20 +9,18 @@
     "axios": "^1.3.5",
     "formik": "^2.2.9",
     "react": "^18.2.0",
-    "react-paginate": "^8.2.0",
-    "react-router": "^6.10.0",
+    "react-dom": "^18.2.0",
     "react-router-dom": "^6.10.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^9.1.2",
     "web-vitals": "^2.1.4",
-    "yup": "^1.0.2"
+    "yup": "^1.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject",
-    "json-server": "json-server -p 8080 --watch src/data/db.json"
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
